@@ -1,7 +1,7 @@
 package com.travelcompass.api.location.service;
 
+import com.amazonaws.util.IOUtils;
 import com.travelcompass.api.global.entity.Uuid;
-import com.travelcompass.api.global.exception.GeneralException;
 import com.travelcompass.api.global.repository.UuidRepository;
 import com.travelcompass.api.global.s3.AmazonS3Manager;
 import com.travelcompass.api.location.domain.CustomMultipartFile;
@@ -10,19 +10,22 @@ import com.travelcompass.api.location.domain.Location;
 import com.travelcompass.api.location.domain.LocationInfo;
 import com.travelcompass.api.location.dto.BusinessHoursDto;
 import com.travelcompass.api.location.dto.LocationScrapingDto;
-import com.travelcompass.api.location.dto.ReviewDto;
 import com.travelcompass.api.location.repository.LocationRepository;
 import io.github.bonigarcia.wdm.WebDriverManager;
+import java.io.InputStream;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.time.Duration;
 import java.time.LocalTime;
-import java.util.HashMap;
+import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.openqa.selenium.By;
 import org.openqa.selenium.Keys;
+import org.openqa.selenium.NoSuchElementException;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
@@ -37,11 +40,12 @@ import org.springframework.web.multipart.MultipartFile;
 @Service
 @RequiredArgsConstructor
 @Transactional
+@Slf4j
 public class LocationScraper {
 
     private static final String BASE_URL = "https://pcmap.place.naver.com/place/";
     private static final String HOME_TAB = "/home";
-    private static final String REVIEW_TAB = "/review/visitor?reviewSort=recent";
+//    private static final String REVIEW_TAB = "/review/visitor?reviewSort=recent";
     private static final String PHOTO_TAB = "/photo";
 
     private final UuidRepository uuidRepository;
@@ -51,7 +55,6 @@ public class LocationScraper {
     private final LocationInfoService locationInfoService;
     private final LocationImageService locationImageService;
     private final BusinessHoursService businessHoursService;
-    private final ReviewService reviewService;
 
     // selenium driver 설정
     private WebDriver driver;
@@ -77,7 +80,6 @@ public class LocationScraper {
             locationImageService.saveImageUrl(locationScrapingDto.getImageUrl(), savedLocation);
             businessHoursService.saveBusinessHours(locationScrapingDto.getBusinessHours(),
                     savedLocation);
-            reviewService.saveReviews(locationScrapingDto.getReviews(), savedLocation);
         }
 
         tearDown();
@@ -88,7 +90,7 @@ public class LocationScraper {
         WebDriverManager.chromedriver().setup();
 
         ChromeOptions options = new ChromeOptions();
-        options.addArguments("headless");
+//        options.addArguments("headless");
         options.addArguments("window-size=1920x1080");
         options.addArguments("disable-gpu");
         options.addArguments("--remote-allow-origin=*");
@@ -101,7 +103,7 @@ public class LocationScraper {
             `홈` 탭으로 이동
          */
         driver.get(BASE_URL + locationInfo.getScrapingId() + HOME_TAB);
-        driver.manage().timeouts().implicitlyWait(Duration.ofMillis(5000));
+        driver.manage().timeouts().implicitlyWait(Duration.ofMillis(3000));
 
         // 별점
         double star = scrapeStar();
@@ -111,7 +113,7 @@ public class LocationScraper {
 
         // 운영 시간
         WebElement businessHoursElement = driver.findElement(
-                By.xpath("//div[@class='O8qbU pSavy']/div"));
+                By.xpath("//div[contains(@class, 'O8qbU pSavy')]/div"));
         businessHoursElement.click();
         Map<DayType, BusinessHoursDto> businessHoursDtoMap = scrapeBusinessHours(
                 businessHoursElement);
@@ -119,14 +121,14 @@ public class LocationScraper {
         // 전화 번호
         String tel = scrapeTel();
 
-        /*
-            `리뷰` 탭으로 이동 (최신순)
-         */
-        driver.get(BASE_URL + locationInfo.getScrapingId() + REVIEW_TAB);
-
-        // 리뷰
-        driver.manage().timeouts().implicitlyWait(Duration.ofMillis(3000));
-        List<ReviewDto> reviewDtos = scrapeReviews();
+//        /*
+//            `리뷰` 탭으로 이동 (최신순)
+//         */
+//        driver.get(BASE_URL + locationInfo.getScrapingId() + REVIEW_TAB);
+//
+//        // 리뷰
+//        driver.manage().timeouts().implicitlyWait(Duration.ofMillis(3000));
+//        List<ReviewDto> reviewDtos = scrapeReviews();
 
         /*
             `사진` 탭으로 이동
@@ -136,6 +138,10 @@ public class LocationScraper {
 
         // 사진
         String src = scrapePhotoSrc();
+
+        // test
+        System.out.println(src);
+
         MultipartFile image = downloadImage(src);
 
         Uuid uuid = uuidRepository.save(Uuid.generateUuid());
@@ -147,7 +153,6 @@ public class LocationScraper {
                 .address(address)
                 .businessHours(businessHoursDtoMap)
                 .tel(tel)
-                .reviews(reviewDtos)
                 .imageUrl(uploadedImageUrl)
                 .build();
     }
@@ -171,7 +176,7 @@ public class LocationScraper {
         List<WebElement> businessHoursElements = businessHoursElement.findElements(
                 By.xpath("div[@class='w9QyJ']/div/span"));
 
-        Map<DayType, BusinessHoursDto> businessHoursDtoMap = new HashMap<>();
+        Map<DayType, BusinessHoursDto> businessHoursDtoMap = new EnumMap<>(DayType.class);
         for (WebElement e : businessHoursElements) {
             String weekString = e.findElement(By.xpath("span")).getText();
             String businessHours = e.findElement(By.xpath("div")).getText();
@@ -196,38 +201,55 @@ public class LocationScraper {
                 .getText();
     }
 
-    private List<ReviewDto> scrapeReviews() {
-        driver.findElement(By.tagName("body")).sendKeys(Keys.PAGE_DOWN);
-
-        try {
-            while (true) {
-                driver.findElement(By.xpath("//div[@class='place_section k5tcc']/div[2]/div/a"))
-                        .click();
-                driver.manage().timeouts().implicitlyWait(Duration.ofMillis(1000));
-            }
-        } catch (Exception e) {
-            // 더 이상 리뷰가 없을 때 반복문 종료
-        }
-
-        return driver.findElements(
-                        By.xpath("//div[@class='place_section_content']/ul/li"))
-                .stream()
-                .map(e -> {
-                    String username = e.findElement(By.xpath("div[1]/a[2]/div[1]"))
-                            .getText();
-                    String content = e.findElement(By.xpath("div[3]/a/span"))
-                            .getText();
-                    String reviewDate = e.findElement(By.xpath("div[5]/div/div[2]/span[1]/time"))
-                            .getText();
-
-                    return ReviewDto.builder()
-                            .username(username)
-                            .content(content)
-                            .reviewDate(reviewDate)
-                            .build();
-                })
-                .toList();
-    }
+    /*
+        개발 및 유지보수가 너무 까다로운 관계로 리뷰 스크래핑은 보류
+     */
+//    private List<ReviewDto> scrapeReviews() {
+//        driver.findElement(By.tagName("body")).sendKeys(Keys.PAGE_DOWN);
+//
+//        boolean elementExists = true;
+//        while (elementExists) {
+//            try {
+//                driver.findElement(By.xpath("//div[@class='place_section k5tcc']/div[2]/div/a"))
+//                        .click();
+//                driver.manage().timeouts().implicitlyWait(Duration.ofMillis(1000));
+//            } catch (Exception ex) {
+//                elementExists = false;
+//            }
+//        }
+//
+//        return driver.findElements(
+//                        By.xpath("//div[@class='place_section_content']/ul/li"))
+//                .stream()
+//                .map(e -> {
+//                    String username = e.findElement(By.xpath("div[@class='SdWYt']/a[2]/div[1]"))
+//                            .getText();
+//
+//                    String content = "";
+//                    try {
+//                        content = e.findElement(By.xpath("div[@class='ZZ4OK IwhtZ']/a/span"))
+//                                .getText();
+//                    } catch (NoSuchElementException ex) {
+//                        log.error("리뷰 내용이 없습니다.", ex);
+//                    }
+//
+//                    // test
+//                    System.out.println(username);
+//                    // end test
+//
+//                    String reviewDate = e.findElement(By.xpath("div[@class='qM6I7']/div/div[2]/span[1]/time"))
+//                            .getText();
+//
+//                    driver.manage().timeouts().implicitlyWait(Duration.ofMillis(3000));
+//
+//                    return ReviewDto.builder()
+//                            .username(username)
+//                            .content(content)
+//                            .reviewDate(reviewDate)
+//                            .build();
+//                })
+//                .toList();
+//    }
 
     private String scrapePhotoSrc() {
         return driver.findElement(
@@ -236,17 +258,10 @@ public class LocationScraper {
     }
 
     private MultipartFile downloadImage(String src) {
-        try {
-            RestTemplate restTemplate = new RestTemplate();
-            ResponseEntity<byte[]> response = restTemplate.getForEntity(new URI(src), byte[].class);
-            byte[] imageBytes = response.getBody();
-
-            if (imageBytes != null) {
-                return new CustomMultipartFile(imageBytes, "image", "image.jpeg",
-                        "jpeg", imageBytes.length);
-            }
-        } catch (URISyntaxException e) {
-            throw new RuntimeException("파일 다운로드 실패", e);
+        try (InputStream in = new URL(src).openStream()) {
+            return new CustomMultipartFile(IOUtils.toByteArray(in));
+        } catch (Exception ex) {
+            log.error("이미지 다운로드에 실패했습니다.", ex);
         }
         return null;
     }
